# PowerPit-Videos

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  roadmap.md
powerpit/: __init__.py  logging_utils.py  preview.py  render.py  rng.py  scene.py  simple_yaml.py  simulation.py
scenes/: circle_basic.yaml  stadium_basic.yaml
tests/: conftest.py  test_scene.py  test_simple_yaml.py  test_simulation.py
